<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_left_vert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_right_vert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <Toolbar
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/top_app_bar"
        app:layout_constraintEnd_toEndOf="@id/top_app_bar"
        app:layout_constraintStart_toStartOf="@id/top_app_bar"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/run_man_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:src="@drawable/image_run_man"
        app:layout_constraintBottom_toBottomOf="@id/line_horizontal"
        app:layout_constraintEnd_toEndOf="@id/line_right_vert"
        app:layout_constraintStart_toStartOf="@id/line_left_vert"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="250dp"
        android:layout_marginTop="72dp"
        app:boxStrokeColor="@color/blue"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/line_right_vert"
        app:layout_constraintStart_toStartOf="@id/line_left_vert"
        app:layout_constraintTop_toBottomOf="@id/line_horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_login"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="250dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/blue"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/line_right_vert"
        app:layout_constraintStart_toStartOf="@id/line_left_vert"
        app:layout_constraintTop_toBottomOf="@id/login_layout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="250dp"
        android:layout_marginTop="32dp"
        android:paddingVertical="12dp"
        android:text="@string/Enter"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:backgroundTint="@color/blue"
        app:elevation="4dp"
        app:rippleColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/line_right_vert"
        app:layout_constraintStart_toStartOf="@id/line_left_vert"
        app:layout_constraintTop_toBottomOf="@id/password_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>